--- a/angular.json
+++ b/angular.json
@@ -28,7 +28,8 @@
             "inlineStyleLanguage": "scss",
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              "src/assets/champions.json"
             ],
             "styles": [
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
