--- a/angular.json
+++ b/angular.json
@@ -28,6 +28,7 @@
             "inlineStyleLanguage": "scss",
             "assets": [
               "src/favicon.ico",
+               "src/assets/champions.json",
               "src/assets"
             ],
             "styles": [
